# DemoAppRepo

./: README.md  pyproject.toml
demoapp/: main.py  models.py  schemas.py
demoapp/db/: __init__.py  base.py  session.py
migrations/: env.py
tests/: test_demoapp.py
