[tool.poetry]
name = "DemoApp"
version = "0.1.0"
description = ""
authors = ["Lakshmi <lakshmi.m@keyvalue.systems>"]

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
alembic = "^1.7.1"
inflect = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
sqlalchemy-stubs = "^0.4"
flake8 = "^3.9.2"
autoflake = "^1.4"
isort = "^5.9.3"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
